--- a/resturant-data-analysis.ipynb
+++ b/resturant-data-analysis.ipynb
@@ -57,6 +57,45 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sn"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0abceee8",
+   "metadata": {},
+   "source": [
+    "### Importing dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b3b9afce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    name online_order book_table   rate  votes  \\\n",
+      "0                  Jalsa          Yes        Yes  4.1/5    775   \n",
+      "1         Spice Elephant          Yes         No  4.1/5    787   \n",
+      "2        San Churro Cafe          Yes         No  3.8/5    918   \n",
+      "3  Addhuri Udupi Bhojana           No         No  3.7/5     88   \n",
+      "4          Grand Village           No         No  3.8/5    166   \n",
+      "\n",
+      "   approx_cost(for two people) listed_in(type)  \n",
+      "0                          800          Buffet  \n",
+      "1                          800          Buffet  \n",
+      "2                          800          Buffet  \n",
+      "3                          300          Buffet  \n",
+      "4                          600          Buffet  \n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe = pd.read_csv('resturant-dataset.csv')\n",
+    "print(dataframe.head())"
+   ]
   }
  ],
  "metadata": {
