completed resturant data analysis

--- a/resturant-data-analysis.ipynb
+++ b/resturant-data-analysis.ipynb
@@ -367,10 +367,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62da2eea",
+   "id": "0c2de643",
    "metadata": {},
    "source": [
-    "### rating comparision added"
+    "### Ratings Comparison - Online vs Offline Orders"
    ]
   },
   {
@@ -404,14 +404,6 @@
     "plt.figure(figsize = (6,6))\n",
     "sn.boxplot(x = 'online_order', y = 'rate', data = dataframe)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e168e3f0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
